Fixed issue with the global search icon not being exposed during tutorial - i.e. the global search icon would appear to be behind the tutorial background image even when circled.

--- a/scss/_ru_header.scss
+++ b/scss/_ru_header.scss
@@ -293,5 +293,4 @@ label[for="ru-search-box"]
 {
     position: absolute;
     width: 100% !important;
-    z-index: 100;
 }
